# simplify-cli

./: .gitignore  README.md  pyproject.toml
src/simplify_cli/: __main__.py  app.py  auth.py  config.py
src/simplify_cli/api/: client.py  endpoints.py  profile.py  tracker.py
src/simplify_cli/commands/: auth_cmd.py  jobs_cmd.py  profile_cmd.py  tracker_cmd.py
src/simplify_cli/display/: panels.py  tables.py
src/simplify_cli/models/: job.py  profile.py  tracker.py  util.py
src/simplify_cli/search/: client.py  filters.py
