[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplify-cli"
version = "0.1.0"
description = "CLI for Simplify.jobs — browse jobs, manage tracker, view profile"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "keyring>=25",
    "platformdirs>=4",
]

[project.scripts]
simplify = "simplify_cli.app:app"
